de/15.7/user/search-not.rst
===========================
NOT-Suche (Ausschlusssuche)
===========================

Wenn Sie nach Dokumenten suchen möchten, die ein bestimmtes Wort nicht enthalten, können Sie die NOT-Suche verwenden.
Dies wird auch als Ausschlusssuche bezeichnet und ist hilfreich, wenn Sie bestimmte Schlüsselwörter aus den Suchergebnissen ausschließen und dadurch irrelevante Treffer reduzieren möchten.

Verwendung
-----------

Bei der NOT-Suche wird NOT vor das Wort gesetzt, das nicht enthalten sein soll. NOT
muss in Großbuchstaben geschrieben werden und erfordert Leerzeichen davor und danach.

Wenn Sie beispielsweise nach Dokumenten suchen möchten, die "Suchbegriff1" enthalten, aber "Suchbegriff2" nicht enthalten, geben Sie Folgendes ein:

::

    Suchbegriff1 NOT Suchbegriff2

Anstelle von NOT können Sie auch ein „-" (Minuszeichen) direkt vor das auszuschließende Wort setzen.
Das folgende Beispiel hat dieselbe Bedeutung wie das obige:

::

    Suchbegriff1 -Suchbegriff2

Siehe auch
-----------

- :doc:`search-and`
- :doc:`search-or`
- :doc:`special-char`
